--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t alievrouw/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run alievruow/react-test npm test -- --coverage
+  - docker run alievrouw/react-test npm test -- --coverage
 
 after_success:
   - docker build -t alievrouw/multi-client ./client
